// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Container should render Default 1`] = `
<DocumentFragment>
  <footer
    class="css-5rtvk-FooterWrapper enubu9x2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg enubu9x1 css-1iuxm26-MuiContainer-root-FooterInnerWrapper"
    >
      <svg
        height="50"
        style="justify-self: center;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="#fff"
          r="50"
        />
      </svg>
      <nav
        class="css-1svnta4-FooterLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/"
        >
          Home
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/a/impressum"
        >
          Impressum
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          FAQ
        </a>
      </nav>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithClassName 1`] = `
<DocumentFragment>
  <footer
    class="extra-classname css-5rtvk-FooterWrapper enubu9x2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg enubu9x1 css-1iuxm26-MuiContainer-root-FooterInnerWrapper"
    >
      <svg
        height="50"
        style="justify-self: center;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="#fff"
          r="50"
        />
      </svg>
      <nav
        class="css-1svnta4-FooterLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/"
        >
          Home
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/a/impressum"
        >
          Impressum
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          FAQ
        </a>
      </nav>
    </div>
  </footer>
</DocumentFragment>
`;

exports[`Footer Container should render WithEmotion 1`] = `
<DocumentFragment>
  <footer
    class="css-5rtvk-FooterWrapper enubu9x2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg enubu9x1 css-1iuxm26-MuiContainer-root-FooterInnerWrapper"
    >
      <svg
        height="50"
        style="justify-self: center;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="#fff"
          r="50"
        />
      </svg>
      <nav
        class="css-1svnta4-FooterLinks enubu9x0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/"
        >
          Home
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="/a/impressum"
        >
          Impressum
        </a>
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
          href="https://google.com"
        >
          FAQ
        </a>
      </nav>
    </div>
  </footer>
</DocumentFragment>
`;
